# GAME1011

./: README.md
Assignment 1/: CMakeLists.txt
Assignment 1/src/: main.cpp
Assignment 2/: Assignment 2.sln  Assignment 2.vcxproj  Assignment 2.vcxproj.filters  CommandHandler.h  ConsoleCommand.cpp  ConsoleCommand.h  Dialog.cpp  Dialog.h  Entity.cpp  Entity.h  Jsonify.h  PropertyImpl.h  SaveLoad.h  dialog.json  main.cpp
CharacterCustomizer/: CMakeLists.txt
CharacterCustomizer/src/armour/: armour_set.cpp
CharacterCustomizer/src/armoury/: armoury.cpp
CharacterCustomizer/src/include/: armour_set.h  validator.h  weapon.h
CharacterCustomizer/src/validator/: validator.cpp
GAME1011 - FINAL/Assignment 1/: Battle Simulator - GAME1011.pptx
Lab 1 - Classes and Pointers/: Achievement.cpp  Game.cpp  Lab 1 Assignment.sln  Lab 1 Assignment.vcxproj  Lab 1 Assignment.vcxproj.filters  Platform.cpp  main.cpp
Lab 2 - CharacterCustomizer/: main.cpp
Lab 2 - CharacterCustomizer/ability/: ability.cpp
Lab 2 - CharacterCustomizer/character/: character.cpp
Lab 3 - Templates/: Lab 3 Templates and (not) Recursion.sln  Lab 3 Templates and (not) Recursion.vcxproj  main.cpp
Lab 4 - PalindromeDetector/: PalindromeDetector.cpp  PalindromeDetector.sln  PalindromeDetector.vcxproj  PalindromeDetector.vcxproj.filters
Lab 5 - Stacks, Queues, Exceptions oh my!/: Lab 5 - Stacks, Queues, Exceptions oh my!.sln  Lab 5 - Stacks, Queues, Exceptions oh my!.vcxproj  Lab 5 - Stacks, Queues, Exceptions oh my!.vcxproj.filters  OutOfPancakeException.h  PancakeShop.cpp  PancakeShop.h  main.cpp
(+30 files in other folders)
